# fCWT

./: .gitignore  CMakeLists.txt  compile_flags.txt  justfile  readme.md
include/: api.h  morlet.h  scales.h  wavelet.h
src/: api.cpp  morlet.cpp  scales.cpp
src/fcwt/: fcwt.cpp  fcwt.h
